fix: Fixed layout break when the user chosen name was too long

--- a/src/app/pages/properties-details/properties-details.component.css
+++ b/src/app/pages/properties-details/properties-details.component.css
@@ -89,6 +89,7 @@ section {
 }
 
 .more-details {
+  overflow: hidden;
   margin-top: 2rem;
   width: 100%;
   max-width: 100%;
@@ -112,24 +113,28 @@ section {
 
 .more-details .title {
   position: relative;
+  overflow: hidden;
   font-size: 2.5rem;
   font-weight: 900;
 }
 
-.more-details .title::after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 1px;
-  top: 6rem;
-  background-color: var(--gray);
-  position: absolute;
-  }
+.more-details p {
+  line-height: 30px;
+  letter-spacing: 1.5px;
+  position: relative;
+  padding-top: 10px;
+}
 
-  .more-details p {
-    line-height: 30px;
-    letter-spacing: 1.5px;
-  }
+.more-details p::before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: var(--gray);
+    position: absolute;
+    top: 0;
+    left: 0;
+}
 
   .contact-btn {
     cursor: pointer;
