--- a/src/app/shared/components/houses-list/houses-list.component.css
+++ b/src/app/shared/components/houses-list/houses-list.component.css
@@ -15,6 +15,7 @@
 }
 
 .house-box {
+  overflow: hidden;
   position: relative;
   padding: 3rem;
   width: 40rem;
@@ -36,6 +37,7 @@
 }
 
 .house-infos {
+  overflow: hidden;
   position: relative;
   height: 20rem;
   margin-top: 1rem;
@@ -71,6 +73,8 @@
 }
 
 .name {
+  height: 7rem;
+  overflow: hidden;
   font-size: 2rem;
   max-width: 100%;
   font-weight: 700;
@@ -82,17 +86,6 @@
   height: 10rem;
   gap: 2rem;
 }
-
-.bot-info::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 1px;
-  background-color: var(--gray);
-}
-
 
 .bot-info .line {
   display: flex;
@@ -113,6 +106,18 @@
   align-items: center;
   justify-content: center;
   height: 10rem;
+  position: relative;
+}
+
+.details::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: var(--gray);
+  position: absolute;
+  top: 1.5rem;
+  left: 0;
 }
 
 .view-details {
@@ -205,19 +210,35 @@
 }
 
 @media (max-width:  544px) {
+  .house-container {
+    margin: 10rem .5rem;
+  }
+
   .house-box {
     height: 100%;
+    padding: 2rem 1rem;
+    margin-bottom: 2rem;
   }
-  .house-infos {
+
+  .name {
+    height: 5rem;
+  }
+
+  .house-box img {
+    width: 100%;
+  }
+
+  .house-infos, .bot-info {
     height: 100%;
   }
 
-  .bot-info::after {
-    bottom: -1.5rem;
+  .details {
+    margin-top: 4rem;
+    height: 100%;
   }
 
-  .bot-info .line span, .bot-info .line span b  {
-    font-size: 1.5rem;
+  .details::before {
+    top: -2rem;
   }
 
   .pagination {
@@ -228,19 +249,6 @@
   .pagination button {
     font-size: 1.6rem;
     width: 8rem;
-  }
-
-  .details {
-    margin-top: 4rem;
-    height: 4rem;
-  }
-
-  .info-top .price {
-    font-size: 1.6rem;
-  }
-
-  .name {
-    font-size: 1.6rem;
   }
 }
 
@@ -258,7 +266,6 @@
 
   .name {
     text-align: center;
-
   }
 
   .bot-info {
@@ -267,9 +274,7 @@
 
   .view-details {
     font-size: 1.4rem;
-    width: 10rem;
   }
-
 
   .bot-info .line{
     flex-wrap: wrap;
